--- a/index.html
+++ b/index.html
@@ -10,85 +10,51 @@
 </head>
 
 <body>
-    <header>
-        <h1 class="welcome">Welcome To Winnie's Space</h1>
-        <hr />
-        <nav>
-            <a href="#"><strong>About</strong></a>
-            <a href="#"><strong>Skills</strong></a>
-            <a href="#"><strong>Projects</strong></a>
-            <a href="#"><strong>Work Experience</strong></a>
-        </nav>
-        <hr />
-    </header>
-
+    <nav>
+        <p><a href="#about">About</a></p>
+        <p><a href="#skills">Skills</a></p>
+        <p><a href="#projects">Projects</a></p>
+    </nav>
     <main>
-        <img src="me2.jpg" alt="Photo of Uzochukwu Winnie" />
-        <h4>Hello, There!!!</h4>
-        <p>So because you clicked, I am delighted. The lady in the photo, that's me. I'm Nweneary Uzochukwu
-            <strong>Winnie
-            </strong>and this is my space. I am an SE student who has been learning to code since January 2022. I'm
-            currently
-            enrolled at the Ingressive for Good/Zuri programme learning Frontend web development part time and also
-            take some
-            other SE courses too.
-        </p>
-        <p>It is my desire to be in the tech community before the end of August. I'd like to be identified as
-            'techy', lol.
-            This is why I am putting in all that I have got now.</p>
-        <p>Ok, let me not bore you with all these serious stuff; I am not half as serious as my intro might have
-            painted
-            me. You will find below some of the things I enjoy and some skills I have.</p>
-        <table>
-            <thead>
-                <th>Hobbies</th>
-                <th>Skills</th>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        <li>Playing!</li>
-                    </td>
-                    <td>
-                        <li>HTML</li>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <li>Gisting!!</li>
-                    </td>
-                    <td>
-                        <li>C</li>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <li>Dancing</li>
-                    </td>
-                    <td>
-                        <li>French</li>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <li>Singing</li>
-                    </td>
-                    <td>
-                        <li>DIY</li>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <p>If you would like to keep in touch with me (like if you have a gig for me, of course lol. Or any
-            'opportunity'), please reach out to me using the contact me button below.
-        </p>
+        <div class="img-card">
+            <img src="me-no-bg.png" alt="Photo of Uzochukwu Winnie" />
+            <div class="img-card-text">
+                <h1>Hello👋. I'm Winnie </h1>
+                <p>a Frontend Developer.</p>
+            </div>
+        </div>
+        <div id="about" class="about-me">
+            <p>I'm Nweneary Uzochukwu <strong>Winnie</strong> and this is my space. I am an SE student who has been
+                learning to code since January 2022. I'm
+                currently enrolled at the Ingressive for Good/Zuri programme learning Frontend web development part time
+                and also take some other SE courses too.It is my desire to be in the tech community before the end of August. I'd
+                like to be identified as 'techy', lol. This is why I am putting in all that I have got now. Ok, let me
+                not bore you with all these serious
+                stuff; I am not half as serious as my intro might have painted me. You will find below some of the
+                things I enjoy and some skills I have.
+            </p>
+        </div>
+        <div id="skills" class="skills">
+            <ul>
+                <li>Html</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>Bootstrap</li>
+                <li>React.js</li>
+                <li>Git</li>
+            </ul>
+        </div>
+        <div id="projects" class="projects">
+
+        </div>
     </main>
     <footer>
         <hr />
-        <a href="#">Twitter</a>
-        <a href="#">LinkedIn</a>
-        <a href="#">Email</a>
-        <a href="#">GitHub</a>
+        <h2>I am just a click away</h2>
+        <a href="https://twitter.com/Wineshuga" target="_blank">Twitter</a>
+        <a href="https://www.linkedin.com/in/uziwinnie" target="_blank">LinkedIn</a>
+        <a href="mailto:uzochukwuwinnie@gmail.com" target="_blank">Email</a>
+        <a href="https://github.com/wineshuga" target="_blank">GitHub</a>
     </footer>
 </body>
 
