changed nav p tags to li tags

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-    <nav>
-        <p><a href="#about">About</a></p>
-        <p><a href="#skills">Skills</a></p>
-        <p><a href="#projects">Projects</a></p>
-    </nav>
+    <header>
+        <nav>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+        </nav>
+    </header>
     <main>
         <div class="img-card">
             <img src="me-no-bg.png" alt="Photo of Uzochukwu Winnie" />
@@ -27,7 +29,8 @@
             <p>I'm Nweneary Uzochukwu <strong>Winnie</strong> and this is my space. I am an SE student who has been
                 learning to code since January 2022. I'm
                 currently enrolled at the Ingressive for Good/Zuri programme learning Frontend web development part time
-                and also take some other SE courses too.It is my desire to be in the tech community before the end of August. I'd
+                and also take some other SE courses too.It is my desire to be in the tech community before the end of
+                August. I'd
                 like to be identified as 'techy', lol. This is why I am putting in all that I have got now. Ok, let me
                 not bore you with all these serious
                 stuff; I am not half as serious as my intro might have painted me. You will find below some of the
@@ -38,8 +41,7 @@
             <ul>
                 <li>Html</li>
                 <li>CSS</li>
-                <li>Javascript</li>
-                <li>Bootstrap</li>
+                <li>JavaScript</li>
                 <li>React.js</li>
                 <li>Git</li>
             </ul>
