remove images, change colors, add fonts.

--- a/index.html
+++ b/index.html
@@ -7,25 +7,20 @@
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
     <title>Winnie's Space</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.cdnfonts.com/css/matchbook" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/sofia" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <nav>
-            <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
         </nav>
     </header>
     <main>
-        <div class="img-card">
-            <img src="me-no-bg.png" alt="Photo of Uzochukwu Winnie" />
-            <div class="img-card-text">
-                <h1>Hello👋. I'm Winnie </h1>
-                <p>a Frontend Developer.</p>
-            </div>
-        </div>
-        <div id="about" class="about-me">
+                <h1>Hello. I'm Winnie </h1>
             <p>I'm Nweneary Uzochukwu <strong>Winnie</strong> and this is my space. I am an SE student who has been
                 learning to code since January 2022. I'm
                 currently enrolled at the Ingressive for Good/Zuri programme learning Frontend web development part time
@@ -36,7 +31,6 @@
                 stuff; I am not half as serious as my intro might have painted me. You will find below some of the
                 things I enjoy and some skills I have.
             </p>
-        </div>
         <div id="skills" class="skills">
             <ul>
                 <li>Html</li>
@@ -51,7 +45,6 @@
         </div>
     </main>
     <footer>
-        <hr />
         <h2>I am just a click away</h2>
         <a href="https://twitter.com/Wineshuga" target="_blank">Twitter</a>
         <a href="https://www.linkedin.com/in/uziwinnie" target="_blank">LinkedIn</a>
