add sections tags and border lines

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.cdnfonts.com/css/matchbook" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/sofia" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/open-sans" rel="stylesheet">
 </head>
 
 <body>
@@ -20,29 +21,31 @@
         </nav>
     </header>
     <main>
+        <section>
+            <div class="intro">
                 <h1>Hello. I'm Winnie </h1>
-            <p>I'm Nweneary Uzochukwu <strong>Winnie</strong> and this is my space. I am an SE student who has been
-                learning to code since January 2022. I'm
-                currently enrolled at the Ingressive for Good/Zuri programme learning Frontend web development part time
-                and also take some other SE courses too.It is my desire to be in the tech community before the end of
-                August. I'd
-                like to be identified as 'techy', lol. This is why I am putting in all that I have got now. Ok, let me
-                not bore you with all these serious
-                stuff; I am not half as serious as my intro might have painted me. You will find below some of the
-                things I enjoy and some skills I have.
-            </p>
-        <div id="skills" class="skills">
-            <ul>
-                <li>Html</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>React.js</li>
-                <li>Git</li>
-            </ul>
-        </div>
-        <div id="projects" class="projects">
+                <p> ... a Frontend Web Developer. I code, read and write (sometimes).
+                    I workhard at trying to make everyday good, so I love fun activities
+                    with friends and enjoy a lot of me-time too.
+                </p>
+            </div>
+        </section>
+        <section>
+            <div id="skills" class="skills">
+                <ul>
+                    <li>Html</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>React.js</li>
+                    <li>Git</li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div id="projects" class="projects">
 
-        </div>
+            </div>
+        </section>
     </main>
     <footer>
         <h2>I am just a click away</h2>
