--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
         </section>
         <section>
             <div id="skills" class="skills">
+                <h3>My Skills</h3>
                 <ul>
                     <li>Html</li>
                     <li>CSS</li>
                     <li>JavaScript</li>
                     <li>React.js</li>
-                    <li>Git</li>
+                    <li>Git and GitHub</li>
                 </ul>
             </div>
         </section>
