upload imgs, code project section

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </p>
             </div>
         </section>
-        <section>
-            <div id="skills" class="skills">
+        <section id="skills">
+            <div class="skills">
                 <h3>My Skills</h3>
                 <ul>
                     <li>Html</li>
@@ -42,13 +42,36 @@
                 </ul>
             </div>
         </section>
-        <section>
-            <div id="projects" class="projects">
-
+        <section id="projects">
+            <div class="projects">
+                <div class="img-box">
+                    <img src="images/blog site.png" alt="thumbnail">
+                    <a href="https://wineshuga.github.io/blog-site">A Blog Site</a>
+                </div>
+                <div class="img-box">
+                    <img src="images/Brainwave.png" alt="thumbnail">
+                    <a href="https://brainwaveblogsite.netlify.app/">Brainwave Blog Page</a>
+                </div>
+                <div class="img-box">
+                    <img src="images/HNG react page (2).png" alt="thumbnail">
+                    <a href="https://wineshuga-linktree.netlify.app/">Profile page</a>
+                </div>
+                <div class="img-box">
+                    <img src="images/natures-resort (2).png" alt="thumbnail">
+                    <a href="https://natures-resort.netlify.app/">Nature's Resort Website</a>
+                </div>
+                <div class="img-box">
+                    <img src="images/FrontendMentor project 1 (2).png" alt="thumbnail">
+                    <a href="https://drop-down-nav.netlify.app/">Nav Page</a>
+                </div>
+                <div class="img-box">
+                    <img src="images/twitter clone.png" alt="thumbnail">
+                    <a href="https://wineshuga.github.io/Twitter-clone/">Twitter clone</a>
+                </div>
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="#contact">
         <h2>I am just a click away</h2>
         <a href="https://twitter.com/Wineshuga" target="_blank">Twitter</a>
         <a href="https://www.linkedin.com/in/uziwinnie" target="_blank">LinkedIn</a>
