--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="intro">
             <div class="intro">
                 <h1>Hello. I'm Winnie </h1>
                 <p> ... a Frontend Web Developer. I code, read and write (sometimes).
@@ -46,37 +46,39 @@
             <div class="projects">
                 <div class="img-box">
                     <img src="images/blog site.png" alt="thumbnail">
-                    <a href="https://wineshuga.github.io/blog-site">A Blog Site</a>
+                    <a href="https://wineshuga.github.io/blog-site">Click Here - A Blog Site.</a>
                 </div>
                 <div class="img-box">
                     <img src="images/Brainwave.png" alt="thumbnail">
-                    <a href="https://brainwaveblogsite.netlify.app/">Brainwave Blog Page</a>
+                    <a href="https://brainwaveblogsite.netlify.app/">Click Here - Brainwave Blog Page</a>
                 </div>
                 <div class="img-box">
                     <img src="images/HNG react page (2).png" alt="thumbnail">
-                    <a href="https://wineshuga-linktree.netlify.app/">Profile page</a>
+                    <a href="https://wineshuga-linktree.netlify.app/">Click Here - Profile page</a>
                 </div>
                 <div class="img-box">
                     <img src="images/natures-resort (2).png" alt="thumbnail">
-                    <a href="https://natures-resort.netlify.app/">Nature's Resort Website</a>
+                    <a href="https://natures-resort.netlify.app/">Click Here - Nature's Resort Website</a>
                 </div>
                 <div class="img-box">
                     <img src="images/FrontendMentor project 1 (2).png" alt="thumbnail">
-                    <a href="https://drop-down-nav.netlify.app/">Nav Page</a>
+                    <a href="https://drop-down-nav.netlify.app/">Click Here - Nav Page</a>
                 </div>
                 <div class="img-box">
                     <img src="images/twitter clone.png" alt="thumbnail">
-                    <a href="https://wineshuga.github.io/Twitter-clone/">Twitter clone</a>
+                    <a href="https://wineshuga.github.io/Twitter-clone/">Click Here - Twitter clone</a>
                 </div>
             </div>
         </section>
     </main>
-    <footer class="#contact">
-        <h2>I am just a click away</h2>
-        <a href="https://twitter.com/Wineshuga" target="_blank">Twitter</a>
-        <a href="https://www.linkedin.com/in/uziwinnie" target="_blank">LinkedIn</a>
-        <a href="mailto:uzochukwuwinnie@gmail.com" target="_blank">Email</a>
-        <a href="https://github.com/wineshuga" target="_blank">GitHub</a>
+    <footer id="#contact" class="contact">
+        <h3>Contact Me</h3>
+        <ul>
+            <li><a href="https://twitter.com/Wineshuga" target="_blank">Twitter</a></li>
+            <li><a href="https://www.linkedin.com/in/uziwinnie" target="_blank">LinkedIn</a></li>
+            <li><a href="mailto:uzochukwuwinnie@gmail.com" target="_blank">Email</a></li>
+            <li><a href="https://github.com/wineshuga" target="_blank">GitHub</a></li>
+        </ul>
     </footer>
 </body>
 
