--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
-    <title>Winnie's Space</title>
+    <title>Wineshuga</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.cdnfonts.com/css/matchbook" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/sofia" rel="stylesheet">
