Remove class name

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <section class="intro">
+        <section>
             <div class="intro">
                 <h1>Hello. I'm Winnie </h1>
                 <p> ... a Frontend Web Developer. I code, read and write (sometimes).
