refactor: change a project to metabnb project

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     <a href="https://wineshuga-linktree.netlify.app/">Click Here - Profile page</a>
                 </div>
                 <div class="img-box">
-                    <img src="images/natures-resort (2).png" alt="thumbnail">
-                    <a href="https://natures-resort.netlify.app/">Click Here - Nature's Resort Website</a>
+                    <img src="images/Metabnb.png" alt="thumbnail">
+                    <a href="https://metabnb-bnb.vercel.app/">Click Here - Metabnb Site</a>
                 </div>
                 <div class="img-box">
                     <img src="images/FrontendMentor project 1 (2).png" alt="thumbnail">
