--- a/index.html
+++ b/index.html
@@ -49,24 +49,24 @@
                     <a href="https://wineshuga.github.io/blog-site">Click Here - A Blog Site.</a>
                 </div>
                 <div class="img-box">
-                    <img src="images/Brainwave.png" alt="thumbnail">
-                    <a href="https://brainwaveblogsite.netlify.app/">Click Here - Brainwave Blog Page</a>
+                    <img src="images/AwesomeBooks.PNG" alt="thumbnail">
+                    <a href="https://wineshuga.github.io/AwesomeBooks/">Click Here - AwesomeBooks App</a>
                 </div>
                 <div class="img-box">
-                    <img src="images/HNG react page (2).png" alt="thumbnail">
-                    <a href="https://wineshuga-linktree.netlify.app/">Click Here - Profile page</a>
+                    <img src="images/EmpowerHer.PNG" alt="thumbnail">
+                    <a href="https://wineshuga.github.io/EmpowerHER-Foundation/">Click Here - EmpowerHer</a>
                 </div>
                 <div class="img-box">
-                    <img src="images/Metabnb.png" alt="thumbnail">
-                    <a href="https://metabnb-bnb.vercel.app/">Click Here - Metabnb Site</a>
+                    <img src="images/LoyaltyApp.PNG" alt="thumbnail">
+                    <a href="https://wineshuga.github.io/loyalty-app">Click Here - Loyalty App</a>
                 </div>
                 <div class="img-box">
                     <img src="images/FrontendMentor project 1 (2).png" alt="thumbnail">
                     <a href="https://drop-down-nav.netlify.app/">Click Here - Nav Page</a>
                 </div>
                 <div class="img-box">
-                    <img src="images/twitter clone.png" alt="thumbnail">
-                    <a href="https://wineshuga.github.io/Twitter-clone/">Click Here - Twitter clone</a>
+                    <img src="images/ToDo list.PNG" alt="thumbnail">
+                    <a href="https://wineshuga.github.io/to-do-list/dist">Click Here - To Do App</a>
                 </div>
             </div>
         </section>
