--- a/index.html
+++ b/index.html
@@ -18,23 +18,22 @@
       <!-- mobile header -->
       <div class="relative md:hidden flex">
         <button type="button" class="ml-3" aria-expanded="false">
-          <i class="fa-solid fa-ellipsis-vertical"></i>
+          <i class="fa-solid fa-bars"></i>
         </button>
 
         <div class="absolute">
-          <div
-            class="w-50 rounded-3xl text-sm"
-          >
-            <div class="">
+          <div class="w-50 rounded-3xl text-sm">
+            <div>
+              <i class="fa-solid fa-xmark"></i>
               <div
-                class="group bg-white opacity-90 relative flex gap-x-3 items-center p-1"
+                class="group bg-white relative flex gap-x-3 items-center rounded-lg p-1"
               >
                 <div
-                  class="mt-1 flex h-11 w-11 flex-none items-center justify-center bg-gray-50"
+                  class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-zinc-300"
                 >
-                  <i class="fa-brands fa-linkedin">
-                    <a href="https://linkedin.com/in/wineshuga"></a>
-                  </i>
+                  <a href="https://linkedin.com/in/wineshuga"
+                    ><i class="fa-brands fa-linkedin"></i
+                  ></a>
                 </div>
                 <div>
                   <a
@@ -46,14 +45,14 @@
                 </div>
               </div>
               <div
-                class="group bg-white opacity-90 relative flex gap-x-3 items-center p-1"
+                class="group bg-white opacity-90 relative flex gap-x-3 items-center rounded-lg p-1"
               >
                 <div
-                  class="mt-1 flex h-11 w-11 flex-none items-center justify-center bg-gray-50"
+                  class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-zinc-300"
                 >
-                  <i class="fa-brands fa-twitter">
-                    <a href="https://twitter.com/wineshuga"></a>
-                  </i>
+                  <a href="https://twitter.com/wineshuga"
+                    ><i class="fa-brands fa-twitter"></i
+                  ></a>
                 </div>
                 <div>
                   <a
@@ -68,11 +67,11 @@
                 class="group bg-white opacity-90 relative flex gap-x-3 items-center rounded-lg p-1"
               >
                 <div
-                  class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50"
+                  class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-zinc-300"
                 >
-                  <i class="fa-solid fa-envelope">
-                    <a href="mailto:uzochukwuwinnie@gmail.com"></a>
-                  </i>
+                  <a href="mailto:uzochukwuwinnie@gmail.com"
+                    ><i class="fa-solid fa-envelope"></i
+                  ></a>
                 </div>
                 <div>
                   <a
@@ -87,15 +86,15 @@
                 class="group bg-white opacity-90 relative flex gap-x-3 items-center rounded-lg p-1"
               >
                 <div
-                  class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50"
+                  class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-zinc-300"
                 >
-                  <i class="fa-brands fa-medium">
-                    <a href="https://medium.com/wineshuga"></a>
-                  </i>
+                  <a href="https://medium.com/@wineshuga"
+                    ><i class="fa-brands fa-medium"></i
+                  ></a>
                 </div>
                 <div>
                   <a
-                    href="https://medium.com/wineshuga"
+                    href="https://medium.com/@wineshuga"
                     class="font-semibold text-gray-900"
                   >
                     Medium
@@ -108,7 +107,11 @@
 
         <section class="text-center w-fit m-auto">
           <div>
-            <h1 class="text-2xl font-bold text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">Winnie's Space</h1>
+            <h1
+              class="text-2xl font-bold text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight"
+            >
+              Winnie's Space
+            </h1>
           </div>
           <div>
             <a href="#works">Works</a>
@@ -119,25 +122,51 @@
       </div>
       <!-- desktop header -->
       <div class="max-md:hidden">
-        <nav class="">
-          <i class="fa-brands fa-linkedin">
-            <a href="https://linkedin.com/in/wineshuga"></a>
-          </i>
-          <i class="fa-brands fa-twitter">
-            <a href="https://twitter.com/wineshuga"></a>
-          </i>
-          <i class="fa-solid fa-envelope">
-            <a href="mailto:uzochukwuwinnie@gmail.com"></a>
-          </i>
-          <i class="fa-brands fa-medium">
-            <a href="https://medium.com/wineshuga"></a>
-          </i>
+        <nav class="group flex gap-x-3 items-center">
+          <div
+            class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-zinc-300"
+          >
+            <a href="https://linkedin.com/in/wineshuga"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+          </div>
+          <div
+            class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-zinc-300"
+          >
+            <a href="https://twitter.com/wineshuga"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+          </div>
+          <div
+            class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-zinc-300"
+          >
+            <a href="mailto:uzochukwuwinnie@gmail.com"
+              ><i class="fa-solid fa-envelope"></i
+            ></a>
+          </div>
+          <div
+            class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-zinc-300"
+          >
+            <a href="https://medium.com/@wineshuga"
+              ><i class="fa-brands fa-medium"></i
+            ></a>
+          </div>
         </nav>
-        <section class="">
-          <h1 class="text-2xl font-bold text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">Winnie's Space</h1>
-          <a href="#works">Works</a>
-          <a href="#articles">Articles</a>
-          <a href="#contact">Contact</a>
+        <section class="text-center">
+          <h1
+            class="text-3xl font-bold text-gray-900 sm:truncate md:text-5xl sm:tracking-tight"
+          >
+            Winnie's Space
+          </h1>
+          <div class="flex justify-center gap-x-10">
+            <a class="text-sky-500 hover:text-sky-700" href="#works">Works</a>
+            <a class="text-sky-500 hover:text-sky-700" href="#articles"
+              >Articles</a
+            >
+            <a class="text-sky-500 hover:text-sky-700" href="#contact"
+              >Contact</a
+            >
+          </div>
         </section>
       </div>
     </header>
