--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width" initial-scale="1.0" />
-    <title>Wineshuga</title>
+    <title>Winnie's space</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script
@@ -21,7 +32,7 @@
           <i class="fa-solid fa-bars"></i>
         </button>
 
-        <div class="absolute">
+        <div class="absolute z-10">
           <div class="w-50 rounded-3xl text-sm">
             <div>
               <i class="fa-solid fa-xmark"></i>
@@ -108,15 +119,19 @@
         <section class="text-center w-fit m-auto">
           <div>
             <h1
-              class="text-2xl font-bold text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight"
+              class="text-4xl font-bold text-gray-900 md:truncate md:text-3xl md:tracking-tight"
             >
               Winnie's Space
             </h1>
           </div>
-          <div>
-            <a href="#works">Works</a>
-            <a href="#articles">Articles</a>
-            <a href="#contact">Contact</a>
+          <div class="flex justify-center gap-x-10">
+            <a class="text-sky-500 hover:text-sky-700" href="#works">Works</a>
+            <a class="text-sky-500 hover:text-sky-700" href="#articles"
+              >Articles</a
+            >
+            <a class="text-sky-500 hover:text-sky-700" href="#contact"
+              >Contact</a
+            >
           </div>
         </section>
       </div>
@@ -170,8 +185,44 @@
         </section>
       </div>
     </header>
-    <main>
-      <section id="intro"></section>
+    <main class="px-4 py-6">
+      <section
+        id="intro"
+        class="grid grid-cols-5 grid-rows-1 md:grid-cols-8 md:grid-rows-4 relative"
+      >
+        <section
+          class="col-span-5 w-72 md:w-full md:col-span-4 md:col-start-2 md:row-start-2 md:row-end-4 lg:absolute lg:top-32"
+        >
+          <img src="./images/profile-pic.jpg" alt="Winnie's picture" />
+        </section>
+        <section
+          class="bg-zinc-300 p-8 md:p-12 lg:p-20 pt-24 col-start-2 col-span-4 md:col-start-5 lg:col-start-4 md:row-start-1 absolute top-56 md:top-20 lg:top-12 leading-7"
+        >
+          <h2 class="text-2xl font-bold text-gray-900 text-center pb-3">
+            Hi, I’m Winnie.
+          </h2>
+          <p class="mb-3">
+            I am a Full-stack Developer, with a background in Agriculture,
+            Customer Service, and Professional teaching. I have been in the tech
+            industry for 2 years and in the past 7 months, I have extensively
+            applied myself to various skills and tools while working as a
+            self-employed developer.
+          </p>
+
+          <p class="mb-3">
+            I have had the opportunity to pair-program with colleagues from
+            diverse cultures and backgrounds and work on real-world problems,
+            building 20+ amazing projects both solo and collaboratively.
+          </p>
+
+          <p>
+            In my free time, I listen to lots of music, spend time with family
+            and friends, read a book, solve some coding challenges, or watch
+            movies. Soon, I will add biking, learning the guitar, and taking
+            evening walks to the list.
+          </p>
+        </section>
+      </section>
       <section id="works"></section>
       <section id="articles"></section>
       <section id="contact"></section>
